Major mdfile2 rewrite.

--- a/tests/mdfile-test/render-1.html
+++ b/tests/mdfile-test/render-1.html
@@ -2,8 +2,10 @@
   <head>
   </head>
   <body>
-    Lets see what happens
+    Lets see what happens.  And what doesn't happen.
     {{body}}
+
+    {{highlight_style}}
 
     <h1>jinja2</h1>
     {%- for item in names %}
