Some tmp changes.

--- a/manual/_templates/main_template.html
+++ b/manual/_templates/main_template.html
@@ -43,6 +43,26 @@
       {{ body }}
     </div>
   </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-4" style="text-align: center;">
+      Last update: {{__last_updated__}}
+    </div>
+    <div class="col-4" style="text-align: center;">
+      Webify version: {{__version__}}
+    </div>
+    <div class="col-4" style="text-align: center;">
+      &copy; Faisal Qureshi
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <hr>
+    </div>
+  </div>
 </div>
 
 </body>
