--- a/manual/_templates/main_template.html
+++ b/manual/_templates/main_template.html
@@ -21,8 +21,8 @@
         margin-right: 20px;
     }
   </style>
-
-  <meta http-equiv="refresh" content="5">
+  
+  <!-- <meta http-equiv="refresh" content="5"> -->
 </head>
 <body>
 
