--- a/manual/_templates/main_template.html
+++ b/manual/_templates/main_template.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="style/webify.css">
+  
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -37,6 +39,10 @@
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="{{web}}" role="button">Checkout on Github</a>
   </p>
+  <hr class="my-4">
+  <h4>Faisal Qureshi</h4>
+  <p>Email: <a href="mailto:faisal.qureshi@ontariotechu.ca">faisal.qureshi@ontariotechu.ca</a><br>
+  Web: <a href="http://vclab.science.ontariotechu.ca">http://vclab.science.ontariotechu.ca</a></p>
   </div>
  
 
